@@ -297,3 +297,17 @@ class OptionConstantsTest(unittest.TestCase):
         curl = pycurl.Curl()
         curl.setopt(curl.KRB4LEVEL, 'clear')
         curl.close()
+    
+    @util.min_libcurl(7, 25, 0)
+    @util.only_ssl
+    def test_ssl_options(self):
+        curl = pycurl.Curl()
+        curl.setopt(curl.SSL_OPTIONS, curl.SSLOPT_ALLOW_BEAST)
+        curl.close()
+    
+    @util.min_libcurl(7, 44, 0)
+    @util.only_ssl
+    def test_ssl_option_no_revoke(self):
+        curl = pycurl.Curl()
+        curl.setopt(curl.SSL_OPTIONS, curl.SSLOPT_NO_REVOKE)
+        curl.close()
